--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="shortcut icon" href="favicon.png" type="image/png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.jsdelivr.net/npm/@logseq/libs/dist/lsplugin.user.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/d3@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/markmap-view"></script>
   <title>Markmap Integration For Logseq</title>
 </head>
-<body class="padding">
-  <div class="bg-red-200 bg-opacity-80">
-    <svg viewBox="0 0 50 50" preserveAspectRatio="xMidYMin slice"
-    width="100%" style=" " id="markmap"></svg>
+<body class="">
+  <div class="h-screen bg-white bg-opacity-90 items-center justify-center flex w-full">
+    <svg class="w-11/12 h-5/6"
+    id="markmap"></svg>
   </div>
 </body>
 </html>
