fix: adjust README.md

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Markmap Integration For Logseq</title>
 </head>
 <body class="">
-  <div class="h-screen bg-white bg-opacity-90 items-center justify-center flex w-full">
+  <div class="h-screen bg-white bg-opacity-95 items-center justify-center flex w-full" id="markmap-container">
     <svg class="w-11/12 h-5/6"
     id="markmap"></svg>
   </div>
