feat: optimize save as png

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
   <script src="https://cdn.jsdelivr.net/npm/markmap-view"></script>
   <title>Markmap Integration For Logseq</title>
 </head>
-<body class="">
+<body class="relative">
   <div class="h-screen bg-white bg-opacity-95 items-center justify-center flex w-full" id="markmap-container">
     <svg class="w-11/12 h-5/6"
     id="markmap"></svg>
   </div>
+  <div id="markmap-toolbar" class="cursor-pointer"></div>
 </body>
 </html>
