--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     }" class="absolute bottom-4 w-full flex items-center justify-center opacity-0 hover:opacity-100">
       <div class="flex flex-row gap-2 w-auto">
         <div x-data title="Random">
-          <svg @click="manual = true; bg = Object.keys(themeList)[Math.floor(Math.random() * Object.keys(themeList).length)]; front = themeList[bg]" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
+          <svg id="random-button" @click="manual = true; bg = Object.keys(themeList)[Math.floor(Math.random() * Object.keys(themeList).length)]; front = themeList[bg]" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd" />
           </svg>
         </div>
@@ -56,7 +56,7 @@
         <div title="Dark red" @click="manual = true; bg = 'bg-red-900'; front = themeList[bg]" class="w-4 h-4 bg-red-700 rounded-full shadow-2xl cursor-pointer"></div>
         <div title="Dark gray" @click="manual = true; bg = 'bg-gray-900'; front = themeList[bg]" class="w-4 h-4 bg-gray-700 rounded-full shadow-2xl cursor-pointer"></div>
         <div title="Reset">
-          <svg @click="manual = false; theme = JSON.parse(localStorage.getItem('theme')); front = 'text-gray-900'; bg = 'bg-gray-100'" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
+          <svg id="reset-button" @click="manual = false; theme = JSON.parse(localStorage.getItem('theme')); front = 'text-gray-900'; bg = 'bg-gray-100'" xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 cursor-pointer" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
           </svg>
         </div>
