--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
 
 </head>
-<body x-data="{ theme: '', manual: false, front: 'text-gray-900', bg: 'bg-gray-100' }" x-init="theme = JSON.parse(localStorage.getItem('theme')); console.log('theme', theme); console.log('manual', manual);"  class="relative" :class="!manual && theme === 'dark' ? 'dark' : '' ">
+<body x-data="{ theme: '', manual: false, front: 'text-gray-900', bg: 'bg-gray-100', showHelp: false }" x-init="theme = JSON.parse(localStorage.getItem('theme')); "  class="relative" :class="!manual && theme === 'dark' ? 'dark' : '' ">
   <div class="h-screen dark:bg-gray-900 dark:text-gray-50 bg-opacity-90 dark:bg-opacity-90 backdrop-blur-sm items-center justify-center flex w-full" :class="{[front]: true, [bg]: true}" id="markmap-container">
     <svg class="w-11/12 h-5/6" id="markmap"></svg>
 
@@ -65,5 +65,142 @@
   </div>
   <div id="markmap-toolbar" class="cursor-pointer dark:text-gray-50" :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"></div>
 
+  <div id="help-modal" class="modal fixed w-full h-full top-0 left-0 flex items-center justify-center z-50" :class="$store.showHelp.on ? '' : 'opacity-0 hidden'">
+    <div class="modal-overlay absolute w-full h-full bg-gray-900 opacity-95"></div>
+
+    <div class="modal-container bg-white w-11/12 md:max-w-xl mx-auto rounded shadow-lg z-40 overflow-y-auto">
+      <!-- Add margin if you want to see some of the overlay behind the modal-->
+      <div class="modal-content py-4 text-left px-6">
+        <!--Title-->
+        <div class="flex justify-between items-center pb-3">
+          <p class="text-2xl font-bold">Key bindings</p>
+          <div @click="showHelp = false" class="modal-close cursor-pointer z-50">
+            <svg @click="$store.showHelp = false;"  class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+              <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+            </svg>
+          </div>
+        </div>
+
+        <div class="mb-2 text-gray-900">Using shortcuts, you can control the mindmap fine-grained.</div>
+
+        <table class="border-collapse border border-blue-900 text-sm leading-relaxed text-gray-900 w-full ">
+          <tr>
+            <th class="border border-blue-900 text-center w-24">Key</th>
+            <th class="border border-blue-900 text-center">Description</th>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">SPACE</td>
+            <td class="pl-2 border border-blue-900">Fit window in center in case you move or zoom it.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">0</td>
+            <td class="pl-2 border border-blue-900">Hide all except the central one.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">9</td>
+            <td class="pl-2 border border-blue-900">Show all.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">1</td>
+            <td class="pl-2 border border-blue-900">Expand to level 1.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">2</td>
+            <td class="pl-2 border border-blue-900">Expand to level 2.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">3</td>
+            <td class="pl-2 border border-blue-900">Expand to level 3.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">4</td>
+            <td class="pl-2 border border-blue-900">Expand to level 4.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">5</td>
+            <td class="pl-2 border border-blue-900">Expand to level 5.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">+</td>
+            <td class="pl-2 border border-blue-900">Zoom in.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">-</td>
+            <td class="pl-2 border border-blue-900">Zoom out.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">h</td>
+            <td class="pl-2 border border-blue-900">Level up.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">l</td>
+            <td class="pl-2 border border-blue-900">Level down.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">j</td>
+            <td class="pl-2 border border-blue-900">Expand step by step.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">k</td>
+            <td class="pl-2 border border-blue-900">Collapse step by step.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">.</td>
+            <td class="pl-2 border border-blue-900">Focus in to children level.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">b</td>
+            <td class="pl-2 border border-blue-900">Focus out to parent level.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">,</td>
+            <td class="pl-2 border border-blue-900">Reset to original tree.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">n</td>
+            <td class="pl-2 border border-blue-900">Focus to next sibling.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">p</td>
+            <td class="pl-2 border border-blue-900">Focus to previous sibling.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">r</td>
+            <td class="pl-2 border border-blue-900">Random change theme.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">z</td>
+            <td class="pl-2 border border-blue-900">Reset theme according to Logseq theme.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">ESC & q</td>
+            <td class="pl-2 border border-blue-900">Close the mindmap.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">/</td>
+            <td class="pl-2 border border-blue-900">Toggle this modal.</td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
+  </div>
+  <script>
+    document.addEventListener('alpine:init', () => {
+        // Alpine.store('showHelp', false)
+
+        Alpine.store('showHelp', {
+            init() {
+                this.on = false
+            },
+
+            on: false,
+
+            toggle() {
+                this.on = ! this.on
+            }
+        })
+    })
+</script>
 </body>
 </html>
