--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         <div class="flex justify-between items-center pb-3">
           <p class="text-2xl font-bold">Key bindings</p>
           <div @click="showHelp = false" class="modal-close cursor-pointer z-50">
-            <svg @click="$store.showHelp = false;"  class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+            <svg @click="$store.showHelp.on = false;"  class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
               <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
             </svg>
           </div>
