fix: adjust doc and help modal

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
           </div>
         </div>
 
-        <div class="mb-2 text-gray-900">Using shortcuts, you can control the mindmap fine-grained.</div>
+        <div class="mb-2 text-gray-900">Using shortcuts, you can fine-grained control the mindmap.</div>
 
         <table class="border-collapse border border-blue-900 text-sm leading-relaxed text-gray-900 w-full ">
           <tr>
@@ -179,6 +179,22 @@
           <tr>
             <td class="pl-2 border border-blue-900">/</td>
             <td class="pl-2 border border-blue-900">Toggle this modal.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">UP</td>
+            <td class="pl-2 border border-blue-900">Move mindmap up.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">DOWN</td>
+            <td class="pl-2 border border-blue-900">Move mindmap down.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">LEFT</td>
+            <td class="pl-2 border border-blue-900">Move mindmap left.</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">RIGHT</td>
+            <td class="pl-2 border border-blue-900">Move mindmap right.</td>
           </tr>
         </table>
 
