fix: Latex syntax not rendered at first time

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Markmap Integration For Logseq</title>
   <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
 
 </head>
 <body x-data="{ theme: '', manual: false, front: 'text-gray-900', bg: 'bg-gray-100', showHelp: false }" x-init="theme = JSON.parse(localStorage.getItem('theme')); "  class="relative" :class="!manual && theme === 'dark' ? 'dark' : '' ">
@@ -162,7 +163,7 @@
           </tr>
           <tr>
             <td class="pl-2 border border-blue-900">.</td>
-            <td class="pl-2 border border-blue-900">Focus in to children level.</td>
+            <td class="pl-2 border border-blue-900">Focus into child level.</td>
           </tr>
           <tr>
             <td class="pl-2 border border-blue-900">b</td>
