--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
   <script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/js/lightbox.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css">
 </head>
 <body x-data="{ theme: '', manual: false, front: 'text-gray-900', bg: 'bg-gray-100', showHelp: false }" x-init="theme = JSON.parse(localStorage.getItem('theme')); "  class="relative" :class="!manual && theme === 'dark' ? 'dark' : '' ">
   <div class="h-screen dark:bg-gray-900 dark:text-gray-50 bg-opacity-90 dark:bg-opacity-90 backdrop-blur-sm items-center justify-center flex w-full" :class="{[front]: true, [bg]: true}" id="markmap-container">
