feat: support trigger backward

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,9 @@
   <div title="Close" class="absolute right-4 top-4 cursor-pointer dark:text-gray-50 opacity-0 hover:opacity-100" :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"><svg id="close-button" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 " viewBox="0 0 20 20" fill="currentColor">
     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
   </svg></div>
+  <div title="Left" class="absolute right-8 top-4 cursor-pointer dark:text-gray-50 opacity-0 hover:opacity-100" :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"><svg id="go-back-button" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z" clip-rule="evenodd" />
+  </svg></div>
   <div id="help-modal" class="modal fixed w-full h-full top-0 left-0 flex items-center justify-center z-50" :class="$store.showHelp.on ? '' : 'opacity-0 hidden'">
     <div class="modal-overlay absolute w-full h-full bg-gray-900 opacity-95"></div>
 
