fix: add shortcut for backward and forward

--- a/src/index.html
+++ b/src/index.html
@@ -214,6 +214,14 @@
             <td class="pl-2 border border-blue-900">Close the mindmap.</td>
           </tr>
           <tr>
+            <td class="pl-2 border border-blue-900">cmd+[</td>
+            <td class="pl-2 border border-blue-900">Go backward</td>
+          </tr>
+          <tr>
+            <td class="pl-2 border border-blue-900">cmd+]</td>
+            <td class="pl-2 border border-blue-900">Go forward</td>
+          </tr>
+          <tr>
             <td class="pl-2 border border-blue-900">/</td>
             <td class="pl-2 border border-blue-900">Toggle this modal.</td>
           </tr>
