--- a/index.html
+++ b/index.html
@@ -24,47 +24,25 @@
     </script>
   </head>
   <body
-    x-data="{ theme: '', manual: false, front: 'text-gray-900', bg: 'bg-gray-100', showHelp: false }"
-    x-init="theme = JSON.parse(localStorage.getItem('theme')); "
+    x-data="{}"
     class="relative"
-    :class="!manual && theme === 'dark' ? 'dark' : '' "
+    :class="!$store.markmap.manual && $store.markmap.theme === 'dark' ? 'dark' : '' "
   >
     <div
       class="h-screen dark:bg-gray-900 dark:text-gray-50 bg-opacity-90 dark:bg-opacity-90 backdrop-blur-sm items-center justify-center flex w-full"
-      :class="{[front]: true, [bg]: true}"
+      :class="{[$store.markmap.front]: true, [$store.markmap.bg]: true}"
       id="markmap-container"
     >
       <svg class="w-11/12 h-5/6" id="markmap"></svg>
 
       <div
-        x-data="{
-      themeList: {
-        'bg-gray-100': 'text-gray-900',
-        'bg-red-100': 'text-red-900',
-        'bg-blue-100': 'text-blue-900',
-        'bg-green-100': 'text-green-900',
-        'bg-yellow-100': 'text-yellow-900',
-        'bg-purple-100': 'text-purple-900',
-        'bg-pink-100': 'text-pink-900',
-        'bg-indigo-100': 'text-indigo-900',
-        'bg-indigo-900': 'text-indigo-100',
-        'bg-pink-900': 'text-pink-100',
-        'bg-purple-900': 'text-purple-100',
-        'bg-yellow-900': 'text-yellow-100',
-        'bg-green-900': 'text-green-100',
-        'bg-blue-900': 'text-blue-100',
-        'bg-red-900': 'text-red-100',
-        'bg-gray-900': 'text-gray-100',
-      }
-
-    }"
         class="absolute bottom-4 w-full flex items-center justify-center opacity-0 hover:opacity-100"
       >
         <div class="flex flex-row gap-2 w-auto">
           <div x-data title="Random">
             <svg
               id="random-button"
-              @click="manual = true; bg = Object.keys(themeList)[Math.floor(Math.random() * Object.keys(themeList).length)]; front = themeList[bg]"
+              @click="$store.markmap.randomTheme();"
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4 cursor-pointer"
               viewBox="0 0 20 20"
@@ -79,88 +57,88 @@
           </div>
           <div
             title="Light gray"
-            @click="manual = true; bg = 'bg-gray-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-gray-100');"
             class="w-4 h-4 bg-gray-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light red"
-            @click="manual = true; bg = 'bg-red-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-red-100');"
             class="w-4 h-4 bg-red-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light blue"
-            @click="manual = true; bg = 'bg-blue-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-blue-100');"
             class="w-4 h-4 bg-blue-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light green"
-            @click="manual = true; bg = 'bg-green-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-green-100');"
             class="w-4 h-4 bg-green-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light yellow"
-            @click="manual = true; bg = 'bg-yellow-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-yellow-100');"
             class="w-4 h-4 bg-yellow-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light pink"
-            @click="manual = true; bg = 'bg-pink-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-pink-100');"
             class="w-4 h-4 bg-purple-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light purple"
-            @click="manual = true; bg = 'bg-purple-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-purple-100');"
             class="w-4 h-4 bg-pink-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Light indigo"
-            @click="manual = true; bg = 'bg-indigo-100'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-indigo-100');"
             class="w-4 h-4 bg-indigo-200 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark indigo"
-            @click="manual = true; bg = 'bg-indigo-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-indigo-900');"
             class="w-4 h-4 bg-indigo-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark purple"
-            @click="manual = true; bg = 'bg-purple-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-purple-900');"
             class="w-4 h-4 bg-pink-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark pink"
-            @click="manual = true; bg = 'bg-pink-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-pink-900');"
             class="w-4 h-4 bg-purple-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark yellow"
-            @click="manual = true; bg = 'bg-yellow-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-yellow-900');"
             class="w-4 h-4 bg-yellow-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark green"
-            @click="manual = true; bg = 'bg-green-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-green-900');"
             class="w-4 h-4 bg-green-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark blue"
-            @click="manual = true; bg = 'bg-blue-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-blue-900');"
             class="w-4 h-4 bg-blue-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark red"
-            @click="manual = true; bg = 'bg-red-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-red-900');"
             class="w-4 h-4 bg-red-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div
             title="Dark gray"
-            @click="manual = true; bg = 'bg-gray-900'; front = themeList[bg]"
+            @click="$store.markmap.setTheme('bg-gray-900');"
             class="w-4 h-4 bg-gray-700 rounded-full shadow-2xl cursor-pointer"
           ></div>
           <div title="Reset">
             <svg
               id="reset-button"
-              @click="manual = false; theme = JSON.parse(localStorage.getItem('theme')); front = 'text-gray-900'; bg = 'bg-gray-100'"
+              @click="$store.markmap.resetTheme(); front = 'text-gray-900'; bg = 'bg-gray-100'"
               xmlns="http://www.w3.org/2000/svg"
               class="h-4 w-4 cursor-pointer"
               viewBox="0 0 20 20"
@@ -179,13 +157,13 @@
     <div
       id="markmap-toolbar"
       class="cursor-pointer dark:text-gray-50"
-      :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
+      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
     ></div>
 
     <div
       title="Close"
       class="absolute right-4 top-4 cursor-pointer dark:text-gray-50 opacity-0 hover:opacity-100"
-      :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
+      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
     >
       <svg
         id="close-button"
@@ -204,7 +182,7 @@
     <div
       title="Go Forward"
       class="absolute right-8 top-4 cursor-pointer dark:text-gray-50 opacity-0 hover:opacity-100"
-      :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
+      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
     >
       <svg
         id="go-forward-button"
@@ -223,7 +201,7 @@
     <div
       title="Go Back"
       class="absolute right-12 top-4 cursor-pointer dark:text-gray-50 opacity-0 hover:opacity-100"
-      :class="bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
+      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
     >
       <svg
         id="go-back-button"
@@ -243,7 +221,7 @@
     <div
       id="help-modal"
       class="modal fixed w-full h-full top-0 left-0 flex items-center justify-center z-50"
-      :class="$store.showHelp.on ? '' : 'opacity-0 hidden'"
+      :class="$store.markmap.on ? '' : 'opacity-0 hidden'"
     >
       <div
         class="modal-overlay absolute w-full h-full bg-gray-900 opacity-95"
@@ -257,12 +235,9 @@
           <!--Title-->
           <div class="flex justify-between items-center pb-3">
             <p class="text-2xl font-bold">Key bindings</p>
-            <div
-              @click="showHelp = false"
-              class="modal-close cursor-pointer z-50"
-            >
+            <div class="modal-close cursor-pointer z-50">
               <svg
-                @click="$store.showHelp.on = false;"
+                @click="$store.markmap.closeHelp();"
                 class="fill-current text-black"
                 xmlns="http://www.w3.org/2000/svg"
                 width="18"
@@ -427,28 +402,72 @@
     </div>
     <script>
       document.addEventListener('alpine:init', () => {
-        // Alpine.store('showHelp', false)
+        Alpine.store('markmap', {
+          // init() {
+          //   this.on = false
+          //   this.theme = ''
+          //   this.manual = false
+          // },
 
-        Alpine.store('showHelp', {
-          init() {
+          on: false,
+          theme: '',
+          manual: false,
+          front: 'text-gray-900',
+          bg: 'bg-gray-100',
+          themeList: {
+            'bg-gray-100': 'text-gray-900',
+            'bg-red-100': 'text-red-900',
+            'bg-blue-100': 'text-blue-900',
+            'bg-green-100': 'text-green-900',
+            'bg-yellow-100': 'text-yellow-900',
+            'bg-purple-100': 'text-purple-900',
+            'bg-pink-100': 'text-pink-900',
+            'bg-indigo-100': 'text-indigo-900',
+            'bg-indigo-900': 'text-indigo-100',
+            'bg-pink-900': 'text-pink-100',
+            'bg-purple-900': 'text-purple-100',
+            'bg-yellow-900': 'text-yellow-100',
+            'bg-green-900': 'text-green-100',
+            'bg-blue-900': 'text-blue-100',
+            'bg-red-900': 'text-red-100',
+            'bg-gray-900': 'text-gray-100',
+          },
+
+          resetTheme() {
+            this.manual = false
+            this.theme = JSON.parse(localStorage.getItem('theme'))
+            this.front = 'text-gray-900'
+            this.bg = 'bg-gray-100'
             this.on = false
           },
 
-          on: false,
+          randomTheme() {
+            this.manual = true
+            this.bg = Object.keys(this.themeList)[
+              Math.floor(Math.random() * Object.keys(this.themeList).length)
+            ]
+            this.front = this.themeList[this.bg]
+          },
 
-          toggle() {
+          setTheme(bg) {
+            this.manual = true
+            this.bg = bg
+            this.front = this.themeList[this.bg]
+          },
+
+          toggleHelp() {
             this.on = !this.on
           },
 
-          close() {
+          closeHelp() {
             this.on = false
           },
 
-          open() {
+          openHelp() {
             this.on = true
           },
 
-          get() {
+          getHelp() {
             return this.on
           },
         })
