refactor: remove Alpine dependency.

--- a/index.html
+++ b/index.html
@@ -7,456 +7,8 @@
     <title>Markmap Integration For Logseq</title>
     <script src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js"></script>
   </head>
-  <body
-    x-data="{}"
-    class="relative"
-    :class="!$store.markmap.manual && $store.markmap.theme === 'dark' ? 'dark' : '' "
-  >
-    <div
-      class="h-screen dark:bg-gray-900 dark:text-gray-50 bg-opacity-90 dark:bg-opacity-90 backdrop-blur-sm items-center justify-center flex w-full"
-      :class="{[$store.markmap.front]: true, [$store.markmap.bg]: true}"
-      id="markmap-container"
-    >
-      <svg class="w-11/12 h-5/6" id="markmap"></svg>
-
-      <div
-        class="absolute bottom-4 w-full flex items-center justify-center opacity-0 hover:opacity-100"
-      >
-        <div class="flex flex-row gap-2 w-auto">
-          <div x-data title="Random">
-            <svg
-              id="random-button"
-              @click="$store.markmap.randomTheme();"
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4 cursor-pointer"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </div>
-          <div
-            title="Light gray"
-            @click="$store.markmap.setTheme('bg-gray-100');"
-            class="w-4 h-4 bg-gray-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light red"
-            @click="$store.markmap.setTheme('bg-red-100');"
-            class="w-4 h-4 bg-red-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light blue"
-            @click="$store.markmap.setTheme('bg-blue-100');"
-            class="w-4 h-4 bg-blue-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light green"
-            @click="$store.markmap.setTheme('bg-green-100');"
-            class="w-4 h-4 bg-green-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light yellow"
-            @click="$store.markmap.setTheme('bg-yellow-100');"
-            class="w-4 h-4 bg-yellow-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light pink"
-            @click="$store.markmap.setTheme('bg-pink-100');"
-            class="w-4 h-4 bg-purple-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light purple"
-            @click="$store.markmap.setTheme('bg-purple-100');"
-            class="w-4 h-4 bg-pink-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Light indigo"
-            @click="$store.markmap.setTheme('bg-indigo-100');"
-            class="w-4 h-4 bg-indigo-200 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark indigo"
-            @click="$store.markmap.setTheme('bg-indigo-900');"
-            class="w-4 h-4 bg-indigo-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark purple"
-            @click="$store.markmap.setTheme('bg-purple-900');"
-            class="w-4 h-4 bg-pink-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark pink"
-            @click="$store.markmap.setTheme('bg-pink-900');"
-            class="w-4 h-4 bg-purple-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark yellow"
-            @click="$store.markmap.setTheme('bg-yellow-900');"
-            class="w-4 h-4 bg-yellow-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark green"
-            @click="$store.markmap.setTheme('bg-green-900');"
-            class="w-4 h-4 bg-green-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark blue"
-            @click="$store.markmap.setTheme('bg-blue-900');"
-            class="w-4 h-4 bg-blue-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark red"
-            @click="$store.markmap.setTheme('bg-red-900');"
-            class="w-4 h-4 bg-red-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div
-            title="Dark gray"
-            @click="$store.markmap.setTheme('bg-gray-900');"
-            class="w-4 h-4 bg-gray-700 rounded-full shadow-2xl cursor-pointer"
-          ></div>
-          <div title="Reset">
-            <svg
-              id="reset-button"
-              @click="$store.markmap.resetTheme(); front = 'text-gray-900'; bg = 'bg-gray-100'"
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4 cursor-pointer"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      id="markmap-toolbar"
-      class="cursor-pointer dark:text-gray-50"
-      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
-    ></div>
-
-    <div
-      title="Close"
-      class="absolute right-4 top-4 cursor-pointer dark:text-gray-50"
-      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
-    >
-      <svg
-        id="close-button"
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-5 w-5 cursor-pointer"
-        viewBox="0 0 20 20"
-        fill="currentColor"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
-          clip-rule="evenodd"
-        />
-      </svg>
-    </div>
-    <div
-      title="Go Forward"
-      class="absolute right-10 top-4 cursor-pointer dark:text-gray-50"
-      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
-    >
-      <svg
-        id="go-forward-button"
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-5 w-5"
-        viewBox="0 0 20 20"
-        fill="currentColor"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 1.414L10.586 9H7a1 1 0 100 2h3.586l-1.293 1.293a1 1 0 101.414 1.414l3-3a1 1 0 000-1.414z"
-          clip-rule="evenodd"
-        />
-      </svg>
-    </div>
-    <div
-      title="Go Back"
-      class="absolute right-16 top-4 cursor-pointer dark:text-gray-50"
-      :class="$store.markmap.bg.indexOf('900') > -1 ? 'text-gray-50' : 'text-gray-900'"
-    >
-      <svg
-        id="go-back-button"
-        xmlns="http://www.w3.org/2000/svg"
-        class="h-5 w-5"
-        viewBox="0 0 20 20"
-        fill="currentColor"
-      >
-        <path
-          fill-rule="evenodd"
-          d="M10 18a8 8 0 100-16 8 8 0 000 16zm.707-10.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L9.414 11H13a1 1 0 100-2H9.414l1.293-1.293z"
-          clip-rule="evenodd"
-        />
-      </svg>
-    </div>
-
-    <div
-      id="help-modal"
-      class="modal fixed w-full h-full top-0 left-0 flex items-center justify-center z-50"
-      :class="$store.markmap.on ? '' : 'opacity-0 hidden'"
-    >
-      <div
-        class="modal-overlay absolute w-full h-full bg-gray-900 opacity-95"
-      ></div>
-
-      <div
-        class="modal-container bg-white w-11/12 md:max-w-xl mx-auto rounded shadow-lg z-40 overflow-y-auto"
-      >
-        <!-- Add margin if you want to see some of the overlay behind the modal-->
-        <div class="modal-content py-4 text-left px-6">
-          <!--Title-->
-          <div class="flex justify-between items-center pb-3">
-            <p class="text-2xl font-bold">Key bindings</p>
-            <div class="modal-close cursor-pointer z-50">
-              <svg
-                @click="$store.markmap.closeHelp();"
-                class="fill-current text-black"
-                xmlns="http://www.w3.org/2000/svg"
-                width="18"
-                height="18"
-                viewBox="0 0 18 18"
-              >
-                <path
-                  d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
-                ></path>
-              </svg>
-            </div>
-          </div>
-
-          <div class="mb-2 text-gray-900">
-            Using shortcuts, you can fine-grained control the mindmap.
-          </div>
-
-          <table
-            class="border-collapse border border-blue-900 text-sm leading-relaxed text-gray-900 w-full"
-          >
-            <tr>
-              <th class="border border-blue-900 text-center w-24">Key</th>
-              <th class="border border-blue-900 text-center">Description</th>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">SPACE</td>
-              <td class="pl-2 border border-blue-900">
-                Fit window in center in case you move or zoom it.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">0</td>
-              <td class="pl-2 border border-blue-900">
-                Hide all except the central one.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">9</td>
-              <td class="pl-2 border border-blue-900">Show all.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">1</td>
-              <td class="pl-2 border border-blue-900">Expand to level 1.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">2</td>
-              <td class="pl-2 border border-blue-900">Expand to level 2.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">3</td>
-              <td class="pl-2 border border-blue-900">Expand to level 3.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">4</td>
-              <td class="pl-2 border border-blue-900">Expand to level 4.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">5</td>
-              <td class="pl-2 border border-blue-900">Expand to level 5.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">+</td>
-              <td class="pl-2 border border-blue-900">Zoom in.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">-</td>
-              <td class="pl-2 border border-blue-900">Zoom out.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">h</td>
-              <td class="pl-2 border border-blue-900">Level up.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">l</td>
-              <td class="pl-2 border border-blue-900">Level down.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">j</td>
-              <td class="pl-2 border border-blue-900">Expand step by step.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">k</td>
-              <td class="pl-2 border border-blue-900">
-                Collapse step by step.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">UP</td>
-              <td class="pl-2 border border-blue-900">Move mindmap up.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">DOWN</td>
-              <td class="pl-2 border border-blue-900">Move mindmap down.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">LEFT</td>
-              <td class="pl-2 border border-blue-900">Move mindmap left.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">RIGHT</td>
-              <td class="pl-2 border border-blue-900">Move mindmap right.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">.</td>
-              <td class="pl-2 border border-blue-900">
-                Focus into child level.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">b</td>
-              <td class="pl-2 border border-blue-900">
-                Focus out to parent level.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">,</td>
-              <td class="pl-2 border border-blue-900">
-                Reset to original tree.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">n</td>
-              <td class="pl-2 border border-blue-900">
-                Focus to next sibling.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">p</td>
-              <td class="pl-2 border border-blue-900">
-                Focus to previous sibling.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">r</td>
-              <td class="pl-2 border border-blue-900">Random change theme.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">z</td>
-              <td class="pl-2 border border-blue-900">
-                Reset theme according to Logseq theme.
-              </td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">ESC & q</td>
-              <td class="pl-2 border border-blue-900">Close the mindmap.</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">cmd+[</td>
-              <td class="pl-2 border border-blue-900">Go backward</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">cmd+]</td>
-              <td class="pl-2 border border-blue-900">Go forward</td>
-            </tr>
-            <tr>
-              <td class="pl-2 border border-blue-900">/</td>
-              <td class="pl-2 border border-blue-900">Toggle this modal.</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-    </div>
-    <script>
-      document.addEventListener('alpine:init', () => {
-        Alpine.store('markmap', {
-          // init() {
-          //   this.on = false
-          //   this.theme = ''
-          //   this.manual = false
-          // },
-
-          on: false,
-          theme: '',
-          manual: false,
-          front: 'text-gray-900',
-          bg: 'bg-gray-100',
-          themeList: {
-            'bg-gray-100': 'text-gray-900',
-            'bg-red-100': 'text-red-900',
-            'bg-blue-100': 'text-blue-900',
-            'bg-green-100': 'text-green-900',
-            'bg-yellow-100': 'text-yellow-900',
-            'bg-purple-100': 'text-purple-900',
-            'bg-pink-100': 'text-pink-900',
-            'bg-indigo-100': 'text-indigo-900',
-            'bg-indigo-900': 'text-indigo-100',
-            'bg-pink-900': 'text-pink-100',
-            'bg-purple-900': 'text-purple-100',
-            'bg-yellow-900': 'text-yellow-100',
-            'bg-green-900': 'text-green-100',
-            'bg-blue-900': 'text-blue-100',
-            'bg-red-900': 'text-red-100',
-            'bg-gray-900': 'text-gray-100',
-          },
-
-          resetTheme() {
-            this.manual = false
-            this.theme = JSON.parse(localStorage.getItem('theme'))
-            this.front = 'text-gray-900'
-            this.bg = 'bg-gray-100'
-            this.on = false
-          },
-
-          randomTheme() {
-            this.manual = true
-            this.bg = Object.keys(this.themeList)[
-              Math.floor(Math.random() * Object.keys(this.themeList).length)
-            ]
-            this.front = this.themeList[this.bg]
-          },
-
-          setTheme(bg) {
-            this.manual = true
-            this.bg = bg
-            this.front = this.themeList[this.bg]
-          },
-
-          toggleHelp() {
-            this.on = !this.on
-          },
-
-          closeHelp() {
-            this.on = false
-          },
-
-          openHelp() {
-            this.on = true
-          },
-
-          getHelp() {
-            return this.on
-          },
-        })
-      })
-    </script>
+  <body>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
